Novas Peças e Advogados

--- a/RedatorSaude/Views/Documents/Create.cshtml
+++ b/RedatorSaude/Views/Documents/Create.cshtml
@@ -88,6 +88,9 @@
                     <option value="AMIL SAÚDE LTDA (MEDIAL SAÚDE)">AMIL SAÚDE LTDA (MEDIAL SAÚDE)</option>
                     <option value="HOSPITAL ALVORADA TAGUATINGA S/A">HOSPITAL ALVORADA TAGUATINGA S/A</option>
                     <option value="ESHO EMPRESAS DE SERVIÇOS HOSPITALARES S/A - HOSPITAL SAMARITANO">ESHO EMPRESAS DE SERVIÇOS HOSPITALARES S/A - HOSPITAL SAMARITANO</option>
+                    <option value="SUL AMERICA COMPANHIA DE SEGURO SAUDE">SUL AMERICA COMPANHIA DE SEGURO SAUDE</option>
+                    <option value="SUL AMERICA ODONTOLOGICO S.A.">SUL AMERICA ODONTOLOGICO S.A.</option>
+                    <option value="CAIXA DE ASSISTÊNCIA DOS FUNCIONÁRIOS DO BANCO DO BRASIL - CASSI">CAIXA DE ASSISTÊNCIA DOS FUNCIONÁRIOS DO BANCO DO BRASIL - CASSI</option>
                 </select>
                 <span asp-validation-for="Reu" class="text-danger"></span>
             </div>
@@ -104,6 +107,9 @@
                     <option value="JUNTADA CUSTAS FINAIS">Juntada Custas Finais</option>
                     <option value="JUNTADA CARTAS SUBS">Juntada Cartas Subs</option>
                     <option value="PROVA PERICIA MEDICA">"Prova pericia medica"</option>
+                    <option value="PETICAO 1018">"Petição 1018"</option>
+                    <option value="JUNTADA HONORARIOS">Juntada Honorarios Periciais</option>
+                    <option value="EMBARGOS DECLARACAO">Embargos Declaracao</option>
                 </select>
                 <span asp-validation-for="NomePeca" class="text-danger"></span>
             </div>
