--- a/RedatorSaude/Views/Documents/Index.cshtml
+++ b/RedatorSaude/Views/Documents/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<RedatorSaude.Models.Document>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Listagem de Documentos";
 }
 
-<h1>Index</h1>
+<h1>Listagem</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Novo Documento</a>
 </p>
 <table class="table">
     <thead>
