--- a/RedatorSaude/Views/Home/Index.cshtml
+++ b/RedatorSaude/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Redator Saúde";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Redator Saúde - Peças Simples</h1>
+    <p><a href="https://ruedaerueda.com.br"> Rueda & Rueda Advogados</a>.</p>
 </div>
