--- a/RedatorSaude/Views/Documents/Create.cshtml
+++ b/RedatorSaude/Views/Documents/Create.cshtml
@@ -112,6 +112,11 @@
                     <option value="PETICAO 1018">Petição 1018</option>
                     <option value="JUNTADA HONORARIOS">Juntada Honorários Periciais</option>
                     <option value="EMBARGOS DECLARACAO">ED - Honorários de sucuembência </option>
+                    <option value="ED REDE CREDENCIADA">ED - Rede Credenciada</option>
+                    <option value="ED REEMBOLSO NOS LIMITES DO CONTRATO">ED - Reembolso nos limites do contrato</option>
+                    <option value="PETIÇÃO PARECER NATJUS">Petição paracer natjus</option>
+                    <option value="PETIÇÃO ESPECIFICAÇÃO - TERAPIAS">Petição especificação - terapias</option>
+                    <option value="HABILITAÇÃO DEVOLUÇÃO DE PRAZOS">Habilitação - Devolução de prazos</option>
                 </select>
                 <span asp-validation-for="NomePeca" class="text-danger"></span>
             </div>
